<resources>
    <string name="app_name">Sudoku</string>
    <string name="continueBtn">   Continue</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="colors_mode">Colors Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">log Out</string>
    <string name="linked_google_account">Linked Google Account</string>

    <string-array name="levelArray">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>