<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="sampleapplication.parzival.com.sampleapplication.SettingsFragment"
    style="@style/BottomSheetDialogTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    tools:context=".ui.main_activity.fragments.settings_fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="30dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:paddingTop="35dp"
            android:paddingBottom="20dp"
            android:text="@string/settings"
            android:textColor="@color/colorOnSecondary"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/language"
            android:textColor="@color/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/LanguageToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <Button
                android:id="@+id/EnglishButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/english" />

            <Button
                android:id="@+id/ArabicButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/arabic" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/colors_mode"
            android:textColor="@color/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/colorsModeToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <Button
                android:id="@+id/darkBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/dark" />

            <Button
                android:id="@+id/lightBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/light" />


        </com.google.android.material.button.MaterialButtonToggleGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray3" />


    <LinearLayout
        android:id="@+id/contactUsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_email" />

        <TextView
            android:id="@+id/contactUsTextView"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:fontFamily="@font/bubblegum_sans"
            android:paddingTop="7dp"
            android:text="@string/contact_us"
            android:textColor="@color/colorOnSecondary"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>